fix z-index of slide number; fixes overlap with video controls

--- a/resource/support/css/decker.css
+++ b/resource/support/css/decker.css
@@ -837,6 +837,7 @@ dd {
   background: transparent;
   color: gray;
   font-size: 0.4em;
+  z-index: -1;
 }
 
 .reveal .resume-button {
